--- a/consumerapp/src/main/AndroidManifest.xml
+++ b/consumerapp/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sf.consumerapp">
 
+    <uses-permission android:name="com.sf.gtdng.READ_DATABASE" />
+    <uses-permission android:name="com.sf.gtdng.WRITE_DATABASE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
