--- a/consumerapp/build.gradle
+++ b/consumerapp/build.gradle
@@ -17,31 +17,62 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField 'boolean', 'LOG_ENABLE', 'Boolean.parseBoolean(\"true\")'
+            buildConfigField 'String', 'BASE_URL', '\"https://api.github.com/\"'
+            buildConfigField 'String', 'AUTH', '\"token 79b97138346fd957f486c5ff962ec323e9286078\"'
+        }
         release {
             minifyEnabled false
+
+            buildConfigField 'boolean', 'LOG_ENABLE', 'Boolean.parseBoolean(\"false\")'
+            buildConfigField 'String', 'BASE_URL', '\""https://api.github.com/"\"'
+            buildConfigField 'String', 'AUTH', '\"token 79b97138346fd957f486c5ff962ec323e9286078\"'
+
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.core:core-ktx:1.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta6'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
     implementation 'com.google.android.material:material:1.1.0'
+
+    //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
 
+    //UI
     implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
     implementation 'com.github.varunest:sparkbutton:1.0.6'
+
+    //image loader
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
+    //Architecture Components
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'android.arch.lifecycle:viewmodel:1.1.1'
+
+    //Network
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.okio:okio:2.2.2'
+    implementation "com.squareup.okhttp3:logging-interceptor:3.10.0"
+    implementation 'com.squareup.okhttp3:okhttp:3.14.1'
+
+    //GSON
     implementation 'com.google.code.gson:gson:2.8.6'
 
     testImplementation 'junit:junit:4.12'
